[package]
name = "extfg-sigma"
version = "0.1.0"
authors = ["Tim Gabets <t.gabets@tinkoff.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.5"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
