[package]
name = "extfg-sigma"
description = "A library for Sigma extfg financial interface messages serialization/deserialization"
version = "0.1.4"
authors = ["Tim Gabets <tim@gabets.ru>"]
edition = "2018"
readme = "README.md"
categories = ["development-tools"]
license = "MIT"
keywords = ["payments", "processing"]
repository = "https://github.com/timgabets/extfg-sigma"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.5"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
